[package]
name = "symparser"
license = "MIT/Apache-2.0"
authors = ["parser-implementations"]
categories = ["command-line-utilities"]
description = "Parser implementation of the SYM file format conceived by PEAK-System"
homepage = "https://github.com/tsabelmann/symparser-rs"
documentation = "https://docs.rs/symparser"
keywords = ["sym", "peak", "can", "decode", "encode"]
repository = "https://github.com/tsabelmann/symparser-rs"
readme = "README.md"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"

[features]
default = ["v6"]
v5 = []
v6 = []